import org.openapitools.generator.gradle.plugin.tasks.GenerateTask

plugins {
    id 'java'
    id 'io.quarkus'
    id 'org.openapi.generator' version '6.6.0'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    // Tooling
    implementation group: 'io.swagger', name: 'swagger-annotations', version: '1.6.9'
    implementation group: 'org.openapitools', name: 'jackson-databind-nullable', version: '0.2.4'
    implementation 'io.quarkus:quarkus-hibernate-validator'

    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-resteasy-reactive'
    implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'

    implementation project(':auth-data')
    testImplementation 'io.quarkus:quarkus-junit5'
}

group 'com.cartobucket.auth'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

def specFile = "$projectDir/src/main/openapi/api.json"

task generateApiServer(type: GenerateTask) {
    def serverOutputDir = "$buildDir/generated/api/server"

    inputs.file specFile
    outputs.dir serverOutputDir

    generatorName = "jaxrs-spec"
    inputSpec = specFile
    // TODO: Once Jakarta is the default this should be able to be removed. DEC 2022
    templateDir = "$projectDir/src/main/openapi/templates/jaxrs-spec"
    outputDir = serverOutputDir

    apiPackage = "com.cartobucket.auth.generated"
    invokerPackage = "com.cartobucket.auth.invoker.generated"
    modelPackage = "com.cartobucket.auth.model.generated"

    generateApiDocumentation = false

    configOptions = [
            dateLibrary   : "java8",
            generatePom   : "false",
            interfaceOnly : "true",
            returnResponse : "true",

            /*
            JAX-RS generator does not respect nullable properties defined in the OpenApi Spec.
            It means that if a field is not nullable but not set it is still returning a null value for this field in the serialized json.
            The below Jackson annotation is made to only keep non null values in serialized json.
            We are not yet using nullable=true properties in our OpenApi so this is a valid workaround at the moment to circumvent the default JAX-RS behavior described above.
            Feel free to read the conversation on https://github.com/airbytehq/airbyte/pull/13370 for more details.
            */
            additionalModelTypeAnnotations: "\n@com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL)",

            // Generate separate classes for each endpoint "domain"
            useTags: "true"
    ]
}

compileJava.dependsOn tasks.generateApiServer

sourceSets {
    main {
        java {
            srcDirs "$buildDir/generated/api/server/src/gen/java", "$projectDir/src/main/java"
        }
        resources {
            srcDir "$projectDir/src/main/openapi/"
        }
    }
}